# gaprag

./: .gitignore  BENCHMARK_PRIORITY.md  EXPERIMENT_MANUAL.md  README.md  RELATED_WORK_BENCHMARKS.md  RESEARCH_REDEFINITION.md  RESTRUCTURE_PLAN.md  TODO.md  pyproject.toml  requirements.txt
configs/: ablation_gap_defs.yaml  ablation_injection.yaml  ablation_memory.yaml  averitec.yaml  base.yaml  continual_qa.yaml  fever.yaml  feverous.yaml  gaprag_memory.yaml  gaprag_no_memory.yaml  gapverify_memory.yaml  hotpotqa.yaml  hover.yaml  nq.yaml  rag.yaml  smoke_tiny.yaml
configs/standard/: averitec.yaml  fever.yaml  feverous.yaml  hover.yaml
configs/toptier/: averitec.yaml  fever.yaml  feverous.yaml  hover.yaml
data/processed/: demo_corpus.jsonl  demo_qa.jsonl
gaprag/: __init__.py  datasets.py  gap_estimator.py  gap_injector.py  generator.py  logging_utils.py  metrics.py  pipeline.py  utils.py
gapverify/: __init__.py  doc_encoder.py  gap_memory.py  hidden_extractor.py  logging_utils.py  metrics.py  pipeline.py  retriever.py
scripts/: analyze_results.py  build_index.py  prepare_benchmark_data.py  run_ablation.py  run_continual_eval.py  run_eval.py  run_experiments.sh  run_standard_verification.sh  run_top_tier_verification.sh  run_ttv.sh
tests/: test_gap_estimator.py  test_gap_injector.py  test_metrics.py
